# game_playing_AI

./: README.md
flappy/: Digraph.gv  config.txt  flappy_game.py
mario_neat/: Digraph.gv  config.txt  git_config.txt  main.py  main_train.py  mario_hyperneat.py  train.py  tut.py  winner.pkl  wrappers.py
mario_ppo/: train.py
mario_ppo/gym-nes-ium/: README.md  __main__.py  backup_restore.py  makefile  pyproject.toml  requirements.txt  setup.cfg
mario_ppo/gym-nes-ium/gym_nes_ium/: __init__.py  __main__.py  nes_env.py  simple_nes.py
mario_ppo/gym-nes-ium/gym_nes_ium/envs/: __init__.py  _roms.py  smb_env.py
mario_ppo/gym-nes-ium/nes/src/: lib_nes_env.cpp
